# socialtrace

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: effa7c28ba02_add_accounts_and_posts_tables.py
backend/src/socialtrace/: main.py  settings.py
backend/src/socialtrace/api/: accounts.py  auth.py  health.py  posts.py
backend/src/socialtrace/db/: base.py  session.py
backend/src/socialtrace/models/: __init__.py  account.py  post.py
backend/src/socialtrace/schemas/: account.py  post.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_health.py  test_migrations.py  test_posts.py
backup/: Dockerfile  entrypoint.sh
caddy/: Caddyfile
docs/adr/: 0001-no-scraping-manual-capture.md  0002-podman-rootless-compose-spec.md  0003-snapshots-as-queries-not-status.md  0004-backup-sidecar-stub-in-phase-0.md  0005-tooling-choices.md
frontend/: Dockerfile  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
